--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Hello Flask</title>
 </head>
 <body>
 
-    <nav>
+    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
