--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1116,6 +1116,11 @@ progress {
     flex: 0 0 auto;
     width: 41.66666667%;
   }
+
+  .col-md-5 img {
+    width: 100%;
+  }
+
   .col-md-6 {
     flex: 0 0 auto;
     width: 50%;
@@ -1124,6 +1129,11 @@ progress {
     flex: 0 0 auto;
     width: 58.33333333%;
   }
+
+.col-md-7 img {
+  width: 100%;
+}
+
   .col-md-8 {
     flex: 0 0 auto;
     width: 66.66666667%;
