--- a/templates/base.html
+++ b/templates/base.html
@@ -86,9 +86,13 @@
 <script>
     document.getElementById("copyright").innerHTML = (new Date().getFullYear());
 </script>
+<div class="container">
 
     {% block content %}
     {% endblock %}
+
+</div>
+    
     
 </body>
 </html>
